# rec-crypto-data

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: crypto_feeds.csv  logging.toml  mappings.market.toml  mappings.toml  markets.toml  news.toml  rss_feeds.dev.csv  settings.toml  tradfi_feeds.csv
docs/: coinmarketcap_map_api.json  data_size.md
notebooks/: mongo_conn_test.ipynb  oracle.ipynb  oracle_conn_test.ipynb  oracle_mongo.ipynb  recording.ipynb
rcd/: .gitignore  __init__.py  bloomberg.ipynb  db_mon.py  latest_timestamp.txt  log_config.py  news.ipynb  news_crypto.json  news_tradfi.json  rec_btc.py  rec_data.py  rec_markets.py  rec_news.py  reddit.json  sync.ipynb  timestamps.json
rcd/config/: __init__.py  log_config.py  mappings.toml  settings.toml
rcd/sinks/: __init__.py  json.py  mongo.py  oracle.py
rcd/util/: ccxt.py  feed.py  http.py  mapping.py
schemas/: funding.json  longs.json  ob.json  oi.json  shorts.json  ticker.json
supervisor/: ReadMe.md  db_mon.ini  fluent-bit.ini  rec_btc.ini  rec_data.ini  rec_markets.ini  rec_news.ini
test_data/: BITMEX_oi_cryptofeed.json  OKX_oi_cryptofeed.json  binance_funding_ccxt.json  binance_ob_ccxt.json  binancefutures_oi_cryptofeed.json  bitfinex_longs_api.json  bitfinex_shorts_api.json  bitmex_funding_ccxt.json  bybit_funding_ccxt.json  bybit_ob_ccxt.json  bybit_ticker_api.json  coinbase_ob_ccxt.json  deribit_ticker_api.json  dydx_ticker_api.json  okx_funding_ccxt.json  okx_ob_ccxt.json
tests/: conftest.py  requirements.txt
(+27 files in other folders)
