[project]
name = "rec-crypto-data"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'aiohttp',
  'aiofiles',
  'asyncio',
  'ccxt',
  'cryptofeed',
  'dynaconf',
  'motor',
  'prettyprint',
  'websockets',
]

[tool.setuptools]
packages = ['rcd']

[tool.setuptools_scm]
write_to = "rcd/_version.py"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
